<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <include layout="@layout/menu_title_bar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="10dp"
        android:gravity="center">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:paddingLeft="5dp"
            android:textSize="16sp"
            android:textColor="#000000"/>

        <EditText
            android:id="@+id/new_password_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="true"
            android:textCursorDrawable="@drawable/jmui_text_cursor_bg"
            android:hint="@string/hint_reset_password"
            android:textColorHint="@color/gray"
            android:password="true"
            style="@style/default_input_style"
            android:textColor="#000000"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/me_split_line_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="10dp"
        android:gravity="center">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="@string/confirm_password"
            android:textSize="16sp"
            android:textColor="#000000"/>

        <EditText
            android:id="@+id/confirm_password_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="true"
            android:textCursorDrawable="@drawable/jmui_text_cursor_bg"
            android:hint="@string/hint_confirm_password"
            android:textColorHint="@color/gray"
            android:password="true"
            style="@style/default_input_style"
            android:textColor="#000000"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/me_split_line_color" />

    <Button
        android:id="@+id/jmui_commit_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/commit"
        android:textSize="@dimen/text_medium_size"
        android:textColor="#FFFFFF"
        android:background="@drawable/login_btn_bg"
        />


</LinearLayout>
