<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical|center_horizontal"
    android:background="@drawable/jmui_dialog_default_style"
    android:orientation="vertical">

    <Button
        android:id="@+id/jmui_dialog_title"
        style="@style/jmui_dialog_msg_alert_txt_style"
        android:textColor="#3F81DF"
        android:clickable="false"
        android:background="@drawable/jmui_dialog_top_btn_bg"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#cbc9ca" />

    <Button
        android:id="@+id/jmui_copy_msg_btn"
        style="@style/jmui_dialog_msg_alert_txt_style"
        android:text="@string/jmui_copy"
        android:background="@drawable/jmui_list_item_bg"
        />


    <View
        android:id="@+id/jmui_forward_split_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#cbc9ca" />

    <Button
        android:id="@+id/jmui_forward_msg_btn"
        android:text="@string/jmui_forward_msg"
        style="@style/jmui_dialog_msg_alert_txt_style"
        android:background="@drawable/jmui_list_item_bg"
        />

    <View
        android:id="@+id/jmui_delete_split_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#cbc9ca" />


    <Button
        android:id="@+id/jmui_delete_msg_btn"
        style="@style/jmui_dialog_msg_alert_txt_style"
        android:background="@drawable/jmui_dialog_bottom_btn_bg"
        android:text="@string/jmui_delete"/>


</LinearLayout>