<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:paddingTop="10dp"
    android:background="@drawable/jmui_dialog_default_style">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_refuse_reason_title"
        android:textSize="@dimen/text_medium_size"
        android:textColor="@color/green"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="10dp"
        android:background="@color/jmui_chat_detail_split_line_color" />

    <EditText
        android:id="@+id/reason_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textCursorDrawable="@drawable/jmui_text_cursor_bg"
        android:textSize="20sp"
        android:maxLines="4"
        android:padding="5dp"
        android:textColor="@color/black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel_btn"
            android:layout_height="50dp"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:text="@string/jmui_cancel"
            android:textColor="#808080"
            android:background="@drawable/jmui_dialog_bottom_left_btn"
            />

        <Button
            android:id="@+id/send_btn"
            android:layout_height="50dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/jmui_send"
            android:textColor="#808080"
            android:background="@drawable/jmui_dialog_bottom_right_btn"
            />
    </LinearLayout>

</LinearLayout>