<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical|center_horizontal"
    android:background="@drawable/jmui_dialog_default_style"
    android:orientation="vertical">

    <TextView
        android:id="@+id/jmui_title_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/jmui_change_pwd_tip"
        android:textColor="@color/jmui_reset_password_title_color"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">


        <EditText
            android:id="@+id/jmui_password_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/jmui_edit_text_bg"
            android:cursorVisible="true"
            android:inputType="textPassword"
            android:padding="5dp"
            android:textColor="#000000"
            android:textCursorDrawable="@drawable/jmui_text_cursor_bg"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/jmui_cancel_btn"
            android:layout_width="0dip"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/jmui_dialog_bottom_left_btn"
            android:text="@string/jmui_cancel"
            android:textColor="#28282a" />

        <Button
            android:id="@+id/jmui_commit_btn"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/jmui_dialog_bottom_right_btn"
            android:text="@string/jmui_confirm"
            android:textColor="#28282a" />

    </LinearLayout>

</LinearLayout>
