<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/drop_down_menu_bg"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:orientation="vertical">

    <LinearLayout
        android:id="@+id/create_group_ll"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="30dp"
        android:background="@drawable/menu_bg">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#d8e3f5"
        android:textSize="@dimen/text_medium_size"
        android:text="@string/create_group"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/add_friend_direct_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_marginTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="30dp"
        android:background="@drawable/menu_bg">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#d8e3f5"
            android:textSize="@dimen/text_medium_size"
            android:text="@string/add_friend_without_confirm"/>

    </LinearLayout>

        <LinearLayout
            android:id="@+id/add_friend_with_confirm_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="30dp"
            android:background="@drawable/menu_bg">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#d8e3f5"
                android:textSize="@dimen/text_medium_size"
                android:text="@string/add_friend"/>

        </LinearLayout>


    </LinearLayout>

</FrameLayout>